Adds explaining text about pipelines and preventing joins using transform()

--- a/04_best_practices.ipynb
+++ b/04_best_practices.ipynb
@@ -426,6 +426,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As analyses get larger, one large chain of methods may become hard to write (and even harder to read!). The solution is to write functions that perform understandable single-purpose analysis steps. This makes it easy to test each step of an analysis, and to reuse steps in other analyses."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -451,7 +458,7 @@
     "def add_z_score(activity_df, column):\n",
     "    return activity_df.assign(**{f'{column}_z': lambda df: to_z_score(df[column])})\n",
     "\n",
-    "def best_n_years(activity_df, metrics=['velocity_mean'], n_years=1):\n",
+    "def show_best_n_years(activity_df, metrics=['velocity_mean'], n_years=1):\n",
     "    return (\n",
     "        activity_df\n",
     "        .assign(year=lambda df: df['start_date_local'].dt.year)\n",
@@ -459,6 +466,13 @@
     "        .sort_values(metrics, ascending=False)\n",
     "        .head(n_years)\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Without even looking at the exact implementation of the functions in the cell above, using `pipe()` we can clearly express what is happening at a high level in a fairly complicated analysis:"
    ]
   },
   {
@@ -471,7 +485,7 @@
     "    activity_df\n",
     "    .pipe(select_non_warmup_runs)\n",
     "    .pipe(add_z_score, column='velocity_mean')\n",
-    "    .pipe(best_n_years, metrics=['velocity_mean_z', 'velocity_mean'], n_years=5)\n",
+    "    .pipe(show_best_n_years, metrics=['velocity_mean_z', 'velocity_mean'], n_years=5)\n",
     ")"
    ]
   },
@@ -555,7 +569,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Introducing ... `Groupby.transform()`, TODO link to docs of agg/transform"
+    "## Preventing Joins"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Without going into details of joining data in Pandas (see the documentation for [`merge()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.merge.html) and [`join()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.join.html)), one often-used (anti-) pattern is to use `groupby()` for computing group-wise aggregates such as the mean, and then using a join to compare individual observations with the group aggregate. For example:"
    ]
   },
   {
@@ -566,9 +587,61 @@
    "source": [
     "(\n",
     "    activity_df\n",
-    "    .loc[lambda df: df['start_date_local'].dt.year == 2018]\n",
-    "    .groupby('type')['velocity_mean'].transform('mean')\n",
+    "    .groupby('type')[['velocity_mean']].mean()\n",
+    "    .reset_index()\n",
+    "    .merge(activity_df, on='type', suffixes=('_of_type',None))\n",
+    "    .assign(velocity_mean_diff=lambda df: df['velocity_mean'] - df['velocity_mean_of_type'])\n",
+    "    .loc[:, ['type', 'name', 'start_date_local', 'velocity_mean_diff', 'velocity_mean']]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can get the same result (although in a different order because of the lack of a join) by using the groupby's [`transform()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.core.groupby.DataFrameGroupBy.transform.html) method. Instead of returning the aggregate result per group, `transform()` returns that result for _every observation_ in the group."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    activity_df\n",
+    "    .groupby('type')[['velocity_mean']].transform('mean')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because the index of the result of `transform()` still corresponds to our source DataFrame, we can simply assign it, thus preventing any (potentially expensive) join/merge and making the analysis more concise and readable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    activity_df\n",
+    "    .assign(\n",
+    "        velocity_mean_of_type=lambda df: df.groupby('type')[['velocity_mean']].transform('mean'),\n",
+    "        velocity_mean_diff=lambda df: df['velocity_mean'] - df['velocity_mean_of_type']\n",
+    "    )\n",
+    "    .loc[:, ['type', 'name', 'start_date_local', 'velocity_mean_diff', 'velocity_mean']]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This more elaborate example shows how we can also pass custom transformation functions to `transform()`:"
    ]
   },
   {
