--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -230,7 +230,7 @@
     "a = 42\n",
     "```\n",
     "\n",
-    "the object `42` is created in one of the storate units, and the variable `a` refers to that object:\n",
+    "the object `42` is created in one of the storage units, and the variable `a` refers to that object:\n",
     "\n",
     "<img alt=\"Memory Layout\" src=\"images/var_assignment/var_assignment.002.png\" width=\"600\">\n",
     "\n",
@@ -261,7 +261,7 @@
     "```\n",
     "the result would have been the creation of the two objects `42` and `99` in memory, with the variable `a` pointing to `99`.\n",
     "\n",
-    "The conclusion here is that the _assignment operator_ `=` never mutates objects, but rather assigns labels to objects in memory!"
+    "The conclusion here is that the _assignment operator_ `=` never mutates the objects on its left hand side, but rather assigns labels to objects in memory!"
    ]
   },
   {
@@ -988,7 +988,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A tuple is a container object very similar to a list. It is created using parantheses instead of square brackets."
+    "A tuple is a container object very similar to a list. It is created using parentheses instead of square brackets."
    ]
   },
   {
@@ -2148,6 +2148,31 @@
    "metadata": {},
    "source": [
     "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `assert` keyword makes Python evaluate the expression following it, raise an `AssertionError` when it evaluates to `False`, or pass silently when evaluating to `True`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert 1 < 2, 'That was unexpected!'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert 1 > 2, 'That was unexpected!'"
    ]
   },
   {
