--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -151,6 +151,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id(bar), id(Foo.bar), id(f.bar)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -528,7 +537,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we add a method to our `Point2D` class to compute the distance to another point, suddenly we can easily find out if a given point is within a circle:"
+    "When we add a method to our `Point2D` class to compute the distance to another point, we can easily find out if a given point is within a circle:"
    ]
   },
   {
@@ -574,33 +583,7 @@
    "outputs": [],
    "source": [
     "c = Circle(center=Point2D(3, 4), radius=1)\n",
-    "assert Point2D(3.5, 4) in c\n",
-    "assert Point2D(5, 4) not in c"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The `assert` keyword makes Python evaluate the expression following it, raise an `AssertionError` when it evaluates to `False`, or pass silently when evaluating to `True`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert 1 < 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert 1 > 2"
+    "Point2D(3.5, 4) in c, Point2D(5, 4) in c, Point2D(5, 4) not in c"
    ]
   },
   {
@@ -832,6 +815,45 @@
    "outputs": [],
    "source": [
     "transaction_df.loc[[0, 2]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To understand how these lookups with the `[]` notation work, consider the [`__getitem__()` magic method](https://docs.python.org/3/reference/datamodel.html#object.__getitem__):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@dataclass\n",
+    "class FooIndexer:\n",
+    "    container: List\n",
+    "    \n",
+    "    def __getitem__(self, label):\n",
+    "        return self.container[label]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FooIndexer([1, 2, 3])[1]"
    ]
   },
   {
@@ -1400,7 +1422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`next()` returns the next element of the sequence represented by the Iterator, while `iter()` turns the object passed to it into the actual Iterator (and performs any necessary initialization). When there are no more elements to return, `next()` is supposed to raise a `StopIteration` exception."
+    "`next()` returns the next element of the sequence represented by the Iterator, while `iter()` turns the object passed to it into the actual Iterator (and performs any necessary initialization). When there are no more elements to return, `next()` is supposed to raise a `StopIteration` exception. (Exception handling is not explained in this tutorial, the appendix contains references to good tutorials)"
    ]
   },
   {
