Typos + minor additions

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can use parantheses to explicitly indicate which sub-expressions should be evaluated first:"
+    "We can use parentheses to explicitly indicate which sub-expressions should be evaluated first:"
    ]
   },
   {
@@ -303,7 +303,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This function defines one _positional_ argument `x` and can be _called_ by using parantheses:"
+    "This function defines one _positional_ argument `x` and can be _called_ by using parentheses:"
    ]
   },
   {
