Optimizes code layout for display in big font

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -2120,7 +2120,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "{user_id: {'name': user_name, 'items_bought': items_bought} for user_id, user_name, items_bought in user_tuples}"
+    "{\n",
+    "    user_id: {'name': user_name, 'items_bought': items_bought}\n",
+    "    for user_id, user_name, items_bought in user_tuples\n",
+    "}"
    ]
   },
   {
