--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -1502,12 +1502,18 @@
     "    shapes: List[Shape2D]\n",
     "    \n",
     "    def __iter__(self):\n",
-    "        self.shape_type_iter = iter(set([shape.__class__.__name__ for shape in self.shapes]))\n",
+    "        self.shape_type_iter = iter(set(\n",
+    "            [shape.__class__.__name__ for shape in self.shapes]\n",
+    "        ))\n",
     "        return self\n",
     "    \n",
     "    def __next__(self):\n",
     "        shape_type = next(self.shape_type_iter)\n",
-    "        return shape_type, [shape for shape in self.shapes if shape.__class__.__name__ == shape_type]"
+    "        return (\n",
+    "            shape_type,\n",
+    "            [shape for shape in self.shapes\n",
+    "             if shape.__class__.__name__ == shape_type]\n",
+    "        )"
    ]
   },
   {
