--- a/03_functional_programming.ipynb
+++ b/03_functional_programming.ipynb
@@ -624,7 +624,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "check_value(max_expected=41)(add_one)(40), check_value(max_expected=41)(add_one)(42)"
+    "(\n",
+    "    check_value(max_expected=41)(add_one)(40),\n",
+    "    check_value(max_expected=41)(add_one)(42)\n",
+    ")"
    ]
   },
   {
