Clarifies expectation of exercise

--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -1701,7 +1701,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Exercise__: Create a class `Vector` that implements the addition and multiplication behavior as given at the top of this module. Use the assertions below to verify the correctness of your solution.\n",
+    "__Exercise__: Create a class `Vector` that implements the addition and multiplication behavior as given at the top of this module. Use the assertions below to verify the correctness of your solution (note that we expect vectors of any number of dimensions).\n",
     "\n",
     "_Hints_: \n",
     "\n",
