Lowers confusion by using conventional casing for classes

--- a/03_functional_programming.ipynb
+++ b/03_functional_programming.ipynb
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "@dataclass\n",
-    "class add_n:\n",
+    "class AddN:\n",
     "    n: int\n",
     "    \n",
     "    def __call__(self, x):\n",
@@ -155,7 +155,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "add_two = add_n(2)\n",
+    "add_two = AddN(2)\n",
     "add_two(42)"
    ]
   },
@@ -451,7 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapper(add_one, [1, None, 100])"
+    "mapper(add_two, [1, None, 100])"
    ]
   },
   {
