Prevents confusion by changing prefix in exercise to something other than **

--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -2244,7 +2244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert prefix_names(user_tuples, R='**') == ['**Ren', 'Stimpy']"
+    "assert prefix_names(user_tuples, R='--') == ['--Ren', 'Stimpy']"
    ]
   },
   {
