Improves variable name by making it clear what is unpacked

--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -1677,8 +1677,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for receiver, receiver_transactions in transaction_df.groupby('to'):\n",
-    "    print(f'{receiver} got a total amount of {receiver_transactions[\"amount\"].sum()}')"
+    "for receiver, receiver_transaction_df in transaction_df.groupby('to'):\n",
+    "    print(f'{receiver} got a total amount of {receiver_transaction_df[\"amount\"].sum()}')"
    ]
   },
   {
