Adds minor clarification about purpose of lambda expressions

--- a/03_functional_programming.ipynb
+++ b/03_functional_programming.ipynb
@@ -641,7 +641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When we intend to use a single-purpose function that consists of returning the evaluation of one expression, we can use _lambda expressions_ instead of defining a (named) function:"
+    "When we intend to use a one-off function that consists of returning the evaluation of one expression, we can use _lambda expressions_ instead of defining a (named) function:"
    ]
   },
   {
