Adds exercise to get used to class and method definitions

--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -492,6 +492,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__Exercise__: Create a class `Vector` that represents a vector in $n$ dimensions. Think about how to represent the vector's components. Should these be seperate attributes? Or a container type such as list? (see the [specs for generic container types](https://docs.python.org/3/library/typing.html#generic-concrete-collections)) \n",
+    "\n",
+    "Similar to the `Point2D` example above, implement a method to calculate the vector's [norm](https://en.wikipedia.org/wiki/Norm_(mathematics)#Euclidean_norm). Use the assertions below to verify the correctness of your solution (note that we expect vectors of any number of dimensions)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load 'solutions/vector_norm.py'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert Vector([3, 4]).norm() == 5\n",
+    "assert Vector([3, 4, 5]).norm() == 50 ** .5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Composition"
    ]
   },
