Adds prompt to investigate label-based indexing

--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -897,6 +897,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__Question:__ What should happen if we want to look up members of the container by custom index labels?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We can add a custom index when constructing a DataFrame:"
    ]
   },
