--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -1533,6 +1533,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all([True, False, True]), any([False, True, False])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1546,15 +1555,6 @@
    "outputs": [],
    "source": [
     "sum([1, 2, 'a'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all([True, False, True]), any([False, True, False])"
    ]
   },
   {
@@ -2291,7 +2291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2305,7 +2305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
