--- a/01_python_basics.ipynb
+++ b/01_python_basics.ipynb
@@ -2244,7 +2244,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert prefix_names(user_tuples, R='--') == ['--Ren', 'Stimpy']"
+    "assert (\n",
+    "    prefix_names(\n",
+    "        (((123, 'Ren', 42),)),\n",
+    "        R='--'\n",
+    "    ) == ['--Ren']\n",
+    ")\n",
+    "\n",
+    "assert (\n",
+    "    prefix_names(\n",
+    "        ((123, 'Ren', 42), (456, 'Stimpy', 99)),\n",
+    "        S='+'\n",
+    "    )\n",
+    "    == ['Ren', '+Stimpy']\n",
+    ")\n",
+    "\n",
+    "assert (\n",
+    "    prefix_names(\n",
+    "        ((123, 'Ren', 42), (456, 'Stimpy', 99)),\n",
+    "        S='!', R='*'\n",
+    "    )\n",
+    "    == ['*Ren', '!Stimpy']\n",
+    ")"
    ]
   },
   {
