--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -989,11 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "transaction_messages = pd.Series(['foo', 'bar', 'baz'], index=[2, 4, 6])\n",
@@ -1858,7 +1854,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1872,7 +1868,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
