--- a/03_functional_programming.ipynb
+++ b/03_functional_programming.ipynb
@@ -224,10 +224,14 @@
    "outputs": [],
    "source": [
     "def is_even(n: int) -> bool:\n",
-    "    return n % 2 == 0\n",
-    "\n",
-    "def filters(filter_fn: Callable, l: Iterable[Any]) -> List[Any]:\n",
-    "    return [x for x in l if filter_fn(x)]"
+    "    return n % 2 == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Exercise:__ Create a function `filters(fn, l)` that accepts a callable and iterable, just as `mapper()` above, and returns the elements of the iterable for which `fn` returns `True`. You can use the function `is_even()` to test your solution."
    ]
   },
   {
@@ -236,7 +240,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filters(is_even, [1, 2, 3, 4])"
+    "# Your solution:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert filters(is_even, [1, 2, 3, 4]) == [2, 4]"
    ]
   },
   {
@@ -938,7 +951,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -952,7 +965,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
