--- a/04_best_practices.ipynb
+++ b/04_best_practices.ipynb
@@ -438,11 +438,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Helper functions\n",
+    "\n",
     "def is_non_warmup(activity_df):\n",
     "    return (\n",
     "        (activity_df['elapsed_time'] > 600) |\n",
     "        (activity_df['heartrate_mean'] > 150)\n",
     "    )\n",
+    "\n",
+    "def to_z_score(series):\n",
+    "    # What if series has a lenght of 1?\n",
+    "    return (series - series.mean()) / series.std()\n",
+    "\n",
+    "\n",
+    "# Pipeline functions\n",
     "\n",
     "def select_non_warmup_runs(activity_df):\n",
     "    return (\n",
@@ -450,10 +459,6 @@
     "        .loc[is_non_warmup]\n",
     "        .loc[lambda df: df['type'] == 'Run']\n",
     "    )\n",
-    "\n",
-    "def to_z_score(series):\n",
-    "    # What if series has a lenght of 1?\n",
-    "    return (series - series.mean()) / series.std()\n",
     "\n",
     "def add_z_score(activity_df, column):\n",
     "    return activity_df.assign(**{f'{column}_z': lambda df: to_z_score(df[column])})\n",
@@ -545,6 +550,50 @@
     "__Bonus Exercise__: Extend this decorator such that it also logs how many rows are missing for each column. The [`isnull()`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.isnull.html) method and `sum()` built-in function may be helpful for this purpose.\n",
     "\n",
     "__Bonus Exercise__: Extend this decorator such that it also logs how much time it took to call the decorated pipeline function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Pipeline functions\n",
+    "\n",
+    "def select_non_warmup_runs(activity_df):\n",
+    "    return (\n",
+    "        activity_df\n",
+    "        .loc[is_non_warmup]\n",
+    "        .loc[lambda df: df['type'] == 'Run']\n",
+    "    )\n",
+    "\n",
+    "def add_z_score(activity_df, column):\n",
+    "    return activity_df.assign(**{f'{column}_z': lambda df: to_z_score(df[column])})\n",
+    "\n",
+    "def show_best_n_years(activity_df, metrics=['velocity_mean'], n_years=1):\n",
+    "    return (\n",
+    "        activity_df\n",
+    "        .assign(year=lambda df: df['start_date_local'].dt.year)\n",
+    "        .groupby('year')[metrics].mean()\n",
+    "        .sort_values(metrics, ascending=False)\n",
+    "        .head(n_years)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test pipeline\n",
+    "\n",
+    "(\n",
+    "    activity_df\n",
+    "    .pipe(select_non_warmup_runs)\n",
+    "    .pipe(add_z_score, column='velocity_mean')\n",
+    "    .pipe(show_best_n_years, metrics=['velocity_mean_z', 'velocity_mean'], n_years=5)\n",
+    ")"
    ]
   },
   {
@@ -821,7 +870,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -835,7 +884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
