Adds typing clarification for decorator examples

--- a/03_functional_programming.ipynb
+++ b/03_functional_programming.ipynb
@@ -202,10 +202,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Callable, Iterable, List, Any\n",
+    "from typing import Callable, Iterable, List, TypeVar, Any\n",
     "\n",
-    "def mapper(fn: Callable, l: Iterable[Any]) -> List[Any]:\n",
+    "T = TypeVar('T')\n",
+    "\n",
+    "def mapper(fn: Callable[[T], T], l: Iterable[T]) -> List[T]:\n",
     "    return [fn(x) for x in l]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice the `TypeVar` `T`, which allows us to specify that the exact types of elements of the iterables and callable signature are unknown, but they all must be of the same type. If we had used `Any` instead of `T`, there would be no way to check if elements of `l` match the type of `fn`'s arguments."
    ]
   },
   {
@@ -416,8 +425,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_n(n):\n",
-    "    def adder(x):\n",
+    "def add_n(n: int) -> Callable[[int], int]:\n",
+    "    def adder(x: int) -> int:\n",
     "        return x + n\n",
     "    return adder"
    ]
@@ -502,8 +511,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def skip_None(fn):\n",
-    "    def fn_wrapper(n):\n",
+    "def skip_None(fn: Callable[[int | None], int | None]) -> Callable[[int | None], int | None]:\n",
+    "    def fn_wrapper(n: int | None) -> int | None:\n",
     "        if n is not None:\n",
     "            return fn(n)\n",
     "        else:\n",
@@ -594,9 +603,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def check_value(max_expected):\n",
-    "    def value_check_decorator(fn):\n",
-    "        def fn_wrapper(n):\n",
+    "def check_value(\n",
+    "    max_expected: float\n",
+    ") -> Callable[[Callable[[float], float]], Callable[[float], float]]:  # 🤯\n",
+    "    def value_check_decorator(\n",
+    "        fn: Callable[[float], float]\n",
+    "    ) -> Callable[[float], float]:\n",
+    "        def fn_wrapper(n: float) -> float:\n",
     "            if n > max_expected:\n",
     "                print(f'Unusual value {n}, expected a maximum of {max_expected}')\n",
     "            return fn(n)\n",
