Iterating/grouping exercise rewrite

--- a/02_object_oriented_programming.ipynb
+++ b/02_object_oriented_programming.ipynb
@@ -599,10 +599,10 @@
     "    center: Point2D\n",
     "    radius: float\n",
     "    \n",
-    "    def circumference(self):\n",
+    "    def circumference(self) -> float:\n",
     "        return 2 * math.pi * self.radius\n",
     "    \n",
-    "    def __contains__(self, point: Point2D):\n",
+    "    def __contains__(self, point: Point2D) -> bool:\n",
     "        return self.center.distance_from(point) <= self.radius"
    ]
   },
@@ -867,18 +867,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "@dataclass\n",
     "class FooIndexer:\n",
-    "    container: List\n",
+    "    container: list\n",
     "    \n",
     "    def __getitem__(self, label):\n",
     "        return self.container[label]"
@@ -1214,10 +1205,10 @@
     "    center: Point2D\n",
     "    side_length: float\n",
     "    \n",
-    "    def circumference(self):\n",
+    "    def circumference(self) -> float:\n",
     "        return 4 * self.side_length\n",
     "    \n",
-    "    def __contains__(self, point: Point2D):\n",
+    "    def __contains__(self, point: Point2D) -> bool:\n",
     "        return (\n",
     "            point.x <= self.center.x + self.side_length / 2 and\n",
     "            point.x >= self.center.x - self.side_length / 2 and\n",
@@ -1267,14 +1258,14 @@
     "    center: Point2D\n",
     "    \n",
     "    @abstractmethod\n",
-    "    def circumference(self):\n",
+    "    def circumference(self) -> float:\n",
     "        pass\n",
     "    \n",
     "    @abstractmethod\n",
-    "    def __contains__(self, point: Point2D):\n",
+    "    def __contains__(self, point: Point2D) -> bool:\n",
     "        pass\n",
     "    \n",
-    "    def distance_to_origin(self):\n",
+    "    def distance_to_origin(self) -> float:\n",
     "        return self.center.distance_to_origin()"
    ]
   },
@@ -1311,7 +1302,7 @@
     "class Circle(Shape2D):\n",
     "    radius: float\n",
     "    \n",
-    "    def circumference(self):\n",
+    "    def circumference(self) -> float:\n",
     "        return 2 * math.pi * self.radius\n",
     "\n",
     "c = Circle(Point2D(3, 4), 1)"
@@ -1334,20 +1325,20 @@
     "class Circle(Shape2D):\n",
     "    radius: float\n",
     "    \n",
-    "    def circumference(self):\n",
+    "    def circumference(self) -> float:\n",
     "        return 2 * math.pi * self.radius\n",
     "    \n",
-    "    def __contains__(self, point: Point2D):\n",
+    "    def __contains__(self, point: Point2D) -> bool:\n",
     "        return self.center.distance_from(point) <= self.radius\n",
     "\n",
     "@dataclass\n",
     "class Square(Shape2D):\n",
     "    side_length: float\n",
     "    \n",
-    "    def circumference(self):\n",
+    "    def circumference(self) -> float:\n",
     "        return 4 * self.side_length\n",
     "    \n",
-    "    def __contains__(self, point: Point2D):\n",
+    "    def __contains__(self, point: Point2D) -> bool:\n",
     "        return (\n",
     "            point.x <= self.center.x + self.side_length / 2 and\n",
     "            point.x >= self.center.x - self.side_length / 2 and\n",
@@ -1376,9 +1367,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import List\n",
-    "\n",
-    "def total_size(shapes: List[Shape2D]) -> float:\n",
+    "def total_size(shapes: list[Shape2D]) -> float:\n",
     "    return sum(s.circumference() for s in shapes)"
    ]
   },
@@ -1516,53 +1505,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import List"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another usage of Iterators is to group \"common\" objects in a sequence and inspecting these groups (or computing some aggregate):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@dataclass\n",
-    "class ShapeGrouper:\n",
-    "    shapes: List[Shape2D]\n",
-    "    \n",
-    "    def __iter__(self):\n",
-    "        self.shape_type_iter = iter(set(\n",
-    "            [shape.__class__.__name__ for shape in self.shapes]\n",
-    "        ))\n",
-    "        return self\n",
-    "    \n",
-    "    def __next__(self):\n",
-    "        shape_type = next(self.shape_type_iter)\n",
-    "        return (\n",
-    "            shape_type,\n",
-    "            [shape for shape in self.shapes\n",
-    "             if shape.__class__.__name__ == shape_type]\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__Bonus Exercise__: What happens if our list of shapes is long, having many unique shape types? Can we make our implementation more efficient by using a dictionary for quickly looking up all shapes of a given type? \n",
+    "__Exercise__: Another usage of Iterators is to group \"common\" objects in a sequence and inspecting these groups (or computing some aggregate). Create a `ShapeGrouper` Iterator that groups its shapes by their type. You can test your solution by the assertion below.\n",
     "\n",
-    "_Hint_: [`collections.defaultdict()`](https://docs.python.org/3/library/collections.html#collections.defaultdict) from the standard library may be particularly useful in this case."
+    "_Hint_: You can get the class name of an object `o` by `o.__class__.__name__`."
    ]
   },
   {
@@ -1602,55 +1550,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "group_iter = iter(grouper)\n",
+    "shape_type, shape_list = next(grouper)\n",
+    "assert shape_type == 'Square'\n",
+    "assert shape_list == [Square(Point2D(1, 1), 1), Square(Point2D(0, 0), 2)]\n",
+    "shape_type, shape_list = next(grouper)\n",
+    "assert shape_type == 'Circle'\n",
+    "assert shape_list == [Circle(Point2D(3, 4), 1)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Bonus Exercise__: What happens if our list of shapes is long, having many unique shape types? Can we make our implementation more efficient by using a dictionary for quickly looking up all shapes of a given type? \n",
+    "\n",
+    "_Hint_: [`collections.defaultdict()`](https://docs.python.org/3/library/collections.html#collections.defaultdict) from the standard library may be particularly useful in this case."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Bonus Exercise 2__: Modify the grouper such that it can compute the total size per shape type as below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# bonus\n",
+    "assert grouper.total_size() == {'Square': 12, 'Circle': 6.283185307179586}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for shape_type, shape_list in grouper:\n",
     "    print(f'{shape_type}: {shape_list}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@dataclass\n",
-    "class ShapeGrouper:\n",
-    "    shapes: List[Shape2D]\n",
-    "    \n",
-    "    def __iter__(self):\n",
-    "        self.shape_type_iter = iter(set([shape.__class__.__name__ for shape in self.shapes]))\n",
-    "        return self\n",
-    "    \n",
-    "    def __next__(self):\n",
-    "        shape_type = next(self.shape_type_iter)\n",
-    "        return shape_type, [shape for shape in self.shapes if shape.__class__.__name__ == shape_type]\n",
-    "    \n",
-    "    def total_size(self):\n",
-    "        return [\n",
-    "            (shape_type, sum([shape.circumference() for shape in shapes]))\n",
-    "            for shape_type, shapes in self\n",
-    "        ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grouper = ShapeGrouper([\n",
-    "    Square(Point2D(1, 1), 1),\n",
-    "    Circle(Point2D(3, 4), 1),\n",
-    "    Square(Point2D(0, 0), 2)\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grouper.total_size()"
    ]
   },
   {
