--- a/03_functional_programming.ipynb
+++ b/03_functional_programming.ipynb
@@ -138,7 +138,7 @@
     "class AddN:\n",
     "    n: int\n",
     "    \n",
-    "    def __call__(self, x):\n",
+    "    def __call__(self, x) -> int:\n",
     "        return x + self.n"
    ]
   },
@@ -202,11 +202,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Callable, Iterable, List, TypeVar, Any\n",
+    "from typing import Callable, Iterable, TypeVar, Any\n",
     "\n",
     "T = TypeVar('T')\n",
     "\n",
-    "def mapper(fn: Callable[[T], T], l: Iterable[T]) -> List[T]:\n",
+    "def mapper(fn: Callable[[T], T], l: Iterable[T]) -> list[T]:\n",
     "    return [fn(x) for x in l]"
    ]
   },
@@ -379,7 +379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_n(x, n=1):\n",
+    "def add_n(x: int, n: int = 1):\n",
     "    return x + n\n",
     "\n",
     "add_three = partial(add_n, n=3)\n",
@@ -489,7 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_one(x):\n",
+    "def add_one(x: int) -> int:\n",
     "    if x is not None:\n",
     "        return x + 1\n",
     "    else:\n",
@@ -534,10 +534,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_one(x):\n",
+    "def add_one(x: int) -> int:\n",
     "    return x + 1\n",
     "\n",
-    "def add_two(x):\n",
+    "def add_two(x: int) -> int:\n",
     "    return x + 2\n",
     "\n",
     "add_one_wrapped = skip_None(add_one)\n",
@@ -558,7 +558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_one(x):\n",
+    "def add_one(x: int) -> int:\n",
     "    return x + 1\n",
     "\n",
     "skip_None(add_one)(1), skip_None(add_one)(None)"
@@ -570,7 +570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_one(x):\n",
+    "def add_one(x: int) -> int:\n",
     "    return x + 1\n",
     "\n",
     "add_one = skip_None(add_one)\n",
@@ -584,7 +584,7 @@
    "outputs": [],
    "source": [
     "@skip_None\n",
-    "def add_one(x):\n",
+    "def add_one(x: int) -> int:\n",
     "    return x + 1\n",
     "\n",
     "add_one(1), add_one(None)"
@@ -617,7 +617,7 @@
     "    return value_check_decorator\n",
     "\n",
     "@check_value(max_expected=42)\n",
-    "def add_one(x):\n",
+    "def add_one(x: int) -> int:\n",
     "    return x + 1\n",
     "\n",
     "mapper(add_one, [1, 42, 100])"
@@ -636,7 +636,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def add_one(x):\n",
+    "def add_one(x: int) -> int:\n",
     "    return x + 1\n",
     "\n",
     "max_41_checker = check_value(max_expected=41)\n",
@@ -785,7 +785,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataclasses import dataclass"
+    "from dataclasses import dataclass\n",
+    "from __future__ import annotations"
    ]
   },
   {
@@ -796,18 +797,18 @@
    "source": [
     "@dataclass\n",
     "class Vector:\n",
-    "    values: List[float]\n",
+    "    values: list[float]\n",
     "    \n",
-    "    def __getitem__(self, index: int):\n",
+    "    def __getitem__(self, index: int) -> float:\n",
     "        return self.values[index]\n",
     "    \n",
-    "    def __len__(self):\n",
+    "    def __len__(self) -> int:\n",
     "        return len(self.values)\n",
     "    \n",
-    "    def __mul__(self, scalar: float):\n",
+    "    def __mul__(self, scalar: float) -> Vector:\n",
     "        return Vector([v * scalar for v in self.values])\n",
     "    \n",
-    "    def __add__(self, other: 'Vector'):\n",
+    "    def __add__(self, other: Vector) -> Vector:\n",
     "        return Vector([self[i] + other[i] for i in range(len(self))])"
    ]
   },
